# egobabyvlm

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pixi.toml  pyproject.toml  typos.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint_and_test.yaml  pages.yml
apps/alignment_scoring/: README.md  __init__.py  configs.py  utils.py
apps/alignment_scoring/configs/dataset/: coco.yaml  coco_karpathy.yaml  ego4d.yaml
apps/alignment_scoring/configs/dataset_path/: coco.yaml  ego4d.yaml
apps/alignment_scoring/configs/lora/: default.yaml
apps/alignment_scoring/configs/model/: pe_core_bigg.yaml  plm_1b.yaml  plm_8b.yaml  vit_b16_openai.yaml
apps/alignment_scoring/configs/pipeline/: captioning.yaml  clip_scoring.yaml  finetune_lora.yaml  sts_scoring.yaml  vqa_scoring.yaml
apps/alignment_scoring/data/: __init__.py  base.py  coco.py  collate.py  text_pair.py  video.py
apps/alignment_scoring/modeling/: __init__.py  plm.py
apps/alignment_scoring/pipelines/: __init__.py  captioning.py  clip_scoring.py  finetune_lora.py  sts_scoring.py  vqa_scoring.py
apps/alignment_scoring/scripts/: __init__.py  create_shuffled_manifest.py
apps/baselines/clip/: README.md  __init__.py  configs.py  contrastive_text_extractor.py  openclip_extractor.py  trained_extractor.py
apps/baselines/clip/configs/: config.yaml
apps/baselines/clip/data/: __init__.py  captions.py  collate.py  text_only.py  transforms.py
apps/baselines/clip/modeling/: __init__.py  dinov2_ssl.py  mlm_head.py  multimodal_model.py  text_encoder.py  vision_encoder.py
apps/baselines/clip/scripts/: __init__.py  export_text_encoder_to_hf.py
apps/baselines/clip/training/: __init__.py  checkpoint.py  interleave.py  loop.py  optim.py  train.py
apps/baselines/dinov2/: README.md  __init__.py  extractor.py
apps/baselines/dinov2/scripts/: train_dinov2.sh
apps/baselines/dinov2/training/: __init__.py  submit.py  train.py
apps/baselines/llava/: README.md  __init__.py  constants.py  feature_extractor.py
apps/baselines/llava/model/: __init__.py  builder.py  llava_arch.py
apps/baselines/llava/scripts/: deepspeed_zero2_config.json  phase1_pretrain.sh  phase2_finetune.sh
apps/baselines/llava/train/: __init__.py  train.py
apps/baselines/lm_training/: README.md  __init__.py  eval.py
apps/baselines/lm_training/scripts/: __init__.py  create_bert_config.py  phase0_train_gpt2.sh  train_bert.sh  train_bert_tokenizer.py
apps/baselines/lm_training/train/: __init__.py  train_bert.py  train_gpt2.py
apps/benchmark_creation/: README.md  USAGE_GUIDE.md  __init__.py  paths.py  task_registry.py
apps/benchmark_creation/configs/: paths.yaml  styles.yaml
apps/benchmark_creation/pipeline/: __init__.py  create_vocabulary.py  db_stats.py  merge_vocabularies.py  vocab_coverage.py
apps/benchmark_creation/pipeline/filtering/: compute_distributions.py  (+3 more)
apps/benchmark_creation/scripts/: run_pipeline.sh
apps/benchmark_creation/utils/: __init__.py  flux_pipeline.py  vision_scoring.py  vllm_server.py  vocabulary.py
apps/data_preprocessing/: README.md  __init__.py
apps/data_preprocessing/frames/: __init__.py  extract_frames.py
apps/data_preprocessing/manifests/: __init__.py  build_manifest.py
apps/data_preprocessing/transcription/: __init__.py  filter_with_vtc.py  whisperx_transcribe.py
apps/swapbench/: README.md  __init__.py
apps/swapbench/longtail_swap/: __init__.py  build_word_lists.py  generate.py
apps/swapbench/utils/: __init__.py  llm_runner.py
apps/swapbench/visual_property_swap/: __init__.py  generate.py  prompts.py
core/modeling/: __init__.py  freeze.py  similarity.py
core/protocols/: __init__.py  feature_extractor.py
core/utils/: __init__.py  checkpoints.py  distributed.py  logging.py  metrics.py  seeding.py  stopes.py  wandb.py  yaml.py
docs/: eval_data.md
docs/leaderboard/: index.html  leaderboard.html  leaderboard.json  style.css  submit.html
docs/leaderboard/submissions/: index.json
evaluation/: configs.py  eval_launcher.py  utils.py
evaluation/base/: __init__.py  dataloader.py  eval_module.py
evaluation/configs/: config.yaml
evaluation/configs/model/: bert_base.yaml  clip_example.yaml  clip_image.yaml  clip_text.yaml  contrastive.yaml  contrastive_text.yaml  dino.yaml  dino_reg.yaml  gpt2.yaml  llava_vision.yaml  pe.yaml  roberta-base.yaml
evaluation/data/: abx.py  base.py  depth.py  devbench.py  machine_devbench.py  semantic_segmentation.py
evaluation/multimodal/devbench/: base.py  metrics.py  pipeline.py
evaluation/multimodal/machine_devbench/: base.py  metrics.py  pipeline.py
evaluation/text/: __init__.py  ltswap.py  pipeline.py  zorro.py
evaluation/vision/: abx.py  depth_estimation.py  knn.py  linear.py  pipeline.py  semantic_segmentation.py
scripts/: __init__.py
scripts/eval_data/: __init__.py  _common.py  _nyu_octave_bridge.m  build_imagenet_extra.py  download_all.py  download_cocostuff.py  download_countbench.py  download_devbench.py  download_ltswap.py  download_machine_devbench.py  download_mnist.py  download_zorro.py  prepare_imagenet_from_hf.py  prepare_nyu.py  validate_imagenet.py  validate_nyu.py
tests/apps/alignment_scoring/: __init__.py  test_configs.py  test_data.py  test_pipelines_smoke.py  test_scripts.py
tests/apps/baselines/: test_clip_extractor.py  test_dinov2_extractor.py
tests/apps/benchmark_creation/: test_grammatical_helpers.py  test_paths_and_registry.py  test_vocabulary.py
tests/apps/data_preprocessing/: test_pipeline_configs.py
tests/apps/lm_training/: test_bert_helpers.py
tests/apps/swapbench/: test_llm_runner.py
tests/core/modeling/: test_similarity.py
tests/core/utils/: test_distributed.py  test_yaml.py
tests/evaluation/: test_config_composition.py
tests/evaluation/data/: test_semantic_segmentation.py
tests/evaluation/multimodal/: test_machine_devbench_aggregator.py
tests/evaluation/text/: test_ltswap_pair_files.py
tests/integration/: _run_eval_module.py  test_real_data_local.py
tests/integration/swapbench/: test_parity.py
(+105 files in other folders)
